--- a/src/main/resources/analytics/i18n/index_es.properties
+++ b/src/main/resources/analytics/i18n/index_es.properties
@@ -4,6 +4,6 @@
 title.analytics=Estadisticas
 loading=Cargando...
 admin_only=Módulo sólo está disponible para los administradores
-need.javascript=Esta aplicaciÃ³n necesita el soporte de Javascript. \
+need.javascript=Esta aplicación necesita el soporte de Javascript. \
 Por favor activelo en su navegador.
 
