--- a/src/main/resources/analytics/i18n/index_fr.properties
+++ b/src/main/resources/analytics/i18n/index_fr.properties
@@ -4,6 +4,6 @@
 title.analytics=Statistiques
 loading=Chargement...
 admin_only=Module uniquement accessible aux administrateurs
-need.javascript:Cette application n\u00c3\u00a9cessite le support de JavaScript par \
+need.javascript:Cette application nécessite le support de JavaScript par \
 votre navigateur. Merci de l'activer.
 
