german translations - closes #777

--- a/src/main/resources/analytics/i18n/index_en.properties
+++ b/src/main/resources/analytics/i18n/index_en.properties
@@ -1,8 +1,7 @@
 ### Translation file
 
 # index.jsp
-title.analytics=Statistiques
+title.analytics=Statistics
 loading=Loading...
-admin_only=You can find geographic data searching by keywords or by region.
 need.javascript=This application needs Javascript support. \
 Please activate it in your browser.
