Nl translation ported to master (#2894)
* Add files via upload

DUTCH : New file for mapfishapp i18n, a bunch of them will follow...

* nl added

* nl added

* nl added

* nl added

* nl added, 7 addons left : atlas, bangeocoder, cadastre, magnifier, notes, openls, template

* indentation correction test

* indentation fix

* nl added

* minor fixes

* : to =

* general logic

* missing translation

* general logic

* logic fixed

* logic fixed

* added Styler/lang/nl.js

* styler submodule updated

Co-authored-by: bendeg <bendeg@users.noreply.github.com>

--- a/src/main/resources/analytics/i18n/index_fr.properties
+++ b/src/main/resources/analytics/i18n/index_fr.properties
@@ -3,6 +3,6 @@
 # index.jsp
 title.analytics=Statistiques
 loading=Chargement...
-need.javascript:Cette application nécessite le support de JavaScript par \
+need.javascript=Cette application nécessite le support de JavaScript par \
 votre navigateur. Merci de l'activer.
 
